# artx_tasks

./: CMakeLists.txt  artx_echo-1.c  artx_echo-2.c  artx_echo-3.c  l2_fwd.c
.intermediate/: l2_fwd.c
