cmake_minimum_required(VERSION 2.8)
project(artx_tasks)

file(GLOB APP_SOURCES *.c)
set(CMAKE_C_FLAGS "-Wall -Wextra -Wpedantic")
foreach(sourcefile ${APP_SOURCES})
	get_filename_component(name "${sourcefile}" NAME)
	file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${sourcefile})
	string(REPLACE ".c" "" file ${filename})
	add_executable(${file} ${sourcefile})
	target_link_libraries(${file} "ev")
	if (NOT ${name} STREQUAL "artx_echo-1.c")
		target_link_libraries(${file} "pthread")
	endif()
endforeach(sourcefile ${APP_SOURCES})
